# dpdash-rs

./: .gitignore  Cargo.toml  typos.toml
assets/icons/: LICENSE
crates/dpdash/: Cargo.toml  build.rs
crates/dpdash/src/: app.rs  app_menus.rs  content.rs  icons.rs  lib.rs  main.rs  sidebar.rs  status_bar.rs  theme_provider.rs  themes.rs  title_bar.rs  workspace.rs
crates/dpdash/src/tools/: console_tool.rs  device_manager_tool.rs  dpload_tool.rs  example_tool.rs  mod.rs  property_editor.rs
crates/dpdash_actions/: Cargo.toml
crates/dpdash_actions/src/: lib.rs
crates/widgets/: Cargo.toml
crates/widgets/src/: toggle_switch.rs  widgets.rs
script/: clippy
themes/: datapanel.json
