[workspace]
resolver = "2"
members = [
    "crates/dpdash",
]

default-members = ["crates/dpdash"]


[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]

dpdash = {path = "crates/dpdash"}
gpui = { git = "https://github.com/zed-industries/zed"}
gpui-macros = { git = "https://github.com/zed-industries/zed"}
gpui-component = { git = "https://github.com/longbridge/gpui-component"}
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component"}

anyhow = "1"
log = "0.4"
rust-i18n = "3"
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1"
serde_repr = "1"
tracing = "0.1.41"

[profile.dev]
split-debuginfo = "unpacked"
incremental = true
codegen-units = 16

[profile.dev.build-override]
codegen-units = 16

[profile.dev.package]
gpui_macros = {opt-level = 3}


[profile.release]
debug = "limited"
lto = "thin"
codegen-units = 1

[profile.release.package]
dpdash = {codegen-units = 16}

[profile.release-fast]
inherits = "release"
debug = "full"
lto = false
codegen-units = 16

[workspace.lints.rust]
unexpected_cfgs = {level = "allow"}

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"


[workspace.metadata.cargo-machete]
ignored = [
    "serde",
]
