[package]
description = "Data Panel dashboard"
edition.workspace = true
name = "dpdash"
version = "1.0.0"
publish.workspace = true
authors = ["Data Panel"]
default-run = "dpdash"

[[bin]]
name = "dpdash"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
gpui.workspace = true
gpui-component.workspace = true
rust-embed.workspace = true

regex = "1"
rust-i18n.workspace = true
serde = "1"
serde_json="1"
tracing.workspace = true
tracing-subscriber = {version = "0.3.22", features = ["env-filter"]}

[target.'cfg(target_os = "macos")'.dependencies]
core-text = "=21.0.0"
